src/patternfly/components/Drawer/drawer.scss
/* ... */
// Header area
.pf-c-drawer__section {
  flex-grow: 0;
  background-color: var(--pf-c-drawer__section--BackgroundColor);

  &.pf-m-no-background {
    --pf-c-drawer__section--BackgroundColor: transparent;
  }

  &.pf-m-light-200 {
    --pf-c-drawer__section--BackgroundColor: var(--pf-c-drawer__section--m-light-200--BackgroundColor);
  }
}

// Main area
.pf-c-drawer__main {
  display: flex;
  flex: 1;
  overflow: hidden;
}

// Content / panel
.pf-c-drawer__content,
.pf-c-drawer__panel,
.pf-c-drawer__panel-main {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  overflow: auto;
}

// Content
.pf-c-drawer__content {
  z-index: var(--pf-c-drawer__content--ZIndex);
  flex-basis: var(--pf-c-drawer__content--FlexBasis);
  order: 0;
  background-color: var(--pf-c-drawer__content--BackgroundColor);

  &.pf-m-no-background {
    --pf-c-drawer__content--BackgroundColor: transparent;
  }

  &.pf-m-light-200 {
    --pf-c-drawer__content--BackgroundColor: var(--pf-c-drawer__content--m-light-200--BackgroundColor);
  }

  > .pf-c-drawer__body {
    padding: var(--pf-c-drawer__content--child--PaddingTop) var(--pf-c-drawer__content--child--PaddingRight) var(--pf-c-drawer__content--child--PaddingBottom) var(--pf-c-drawer__content--child--PaddingLeft);
  }
}

// Panel
.pf-c-drawer__panel {
  position: relative;
  z-index: var(--pf-c-drawer__panel--ZIndex);
  flex-basis: var(--pf-c-drawer__panel--FlexBasis);
  order: 1;
  max-height: var(--pf-c-drawer__panel--MaxHeight);
  overflow: auto;
  background-color: var(--pf-c-drawer__panel--BackgroundColor);
  box-shadow: var(--pf-c-drawer__panel--BoxShadow);
  transition-duration: var(--pf-c-drawer__panel--TransitionDuration);
  transition-property: var(--pf-c-drawer__panel--TransitionProperty);
  -webkit-overflow-scrolling: touch;

  &::after {
    position: absolute;
    top: 0;
    left: 0;
    width: var(--pf-c-drawer__panel--after--Width);
    height: 100%;
    content: "";
    background-color: var(--pf-c-drawer__panel--after--BackgroundColor);
  }

  &.pf-m-no-background {
    --pf-c-drawer__panel--BackgroundColor: transparent;
  }

  &.pf-m-light-200 {
    --pf-c-drawer__panel--BackgroundColor: var(--pf-c-drawer__panel--m-light-200--BackgroundColor);
  }

  @media screen and (min-width: $pf-global--breakpoint--md) {
    --pf-c-drawer__panel--FlexBasis:
      max(
        var(--pf-c-drawer__panel--md--FlexBasis--min),
        min(var(--pf-c-drawer__panel--md--FlexBasis), var(--pf-c-drawer__panel--md--FlexBasis--max))
      );
  }

  @media screen and (min-width: $pf-global--breakpoint--xl) {
    --pf-c-drawer__panel--md--FlexBasis: var(--pf-c-drawer__panel--xl--FlexBasis);

    .pf-c-drawer.pf-m-panel-bottom & {
      --pf-c-drawer__panel--md--FlexBasis: var(--pf-c-drawer--m-panel-bottom__panel--xl--FlexBasis);
    }
  }
}

// Remove tab focus
@include pf-animate-remove-tab-focus(".pf-c-drawer__panel", var(--pf-c-drawer__panel--TransitionDuration));

// Panel head
.pf-c-drawer__head {
  display: grid;
  grid-template-columns: auto;
  grid-auto-columns: max-content;

  > * {
    grid-column: 1;
  }
}

// Panel actions
.pf-c-drawer__actions {
  grid-column: 2;
  grid-row: 1;
  display: flex;
  align-self: baseline;
  margin-top: var(--pf-c-drawer__actions--MarginTop);
  margin-right: var(--pf-c-drawer__actions--MarginRight);
}

// Modified content children
.pf-c-drawer__body {
  min-height: 0;
  padding: var(--pf-c-drawer--child--PaddingTop) var(--pf-c-drawer--child--PaddingRight) var(--pf-c-drawer--child--PaddingBottom) var(--pf-c-drawer--child--PaddingLeft);

  // No padding
  &.pf-m-no-padding {
    padding: 0;

    > .pf-c-drawer__actions,
    > .pf-c-drawer__head > .pf-c-drawer__actions {
      margin-top: 0;
      margin-right: 0;
    }
  }

  // Padding
  &.pf-m-padding {
    padding: var(--pf-c-drawer--child--m-padding--PaddingTop) var(--pf-c-drawer--child--m-padding--PaddingRight) var(--pf-c-drawer--child--m-padding--PaddingBottom) var(--pf-c-drawer--child--m-padding--PaddingLeft);
  }

  &:not(.pf-m-no-padding) + * {
    padding-top: 0;
  }

  &:last-child {
    flex: 1 1;
  }
}

// Page level drawer
.pf-c-drawer__body > .pf-c-page__main {
  min-height: 100%;
}
/* ... */

